assembly, docker, and doc fixes for dcos